--- a/stories.html
+++ b/stories.html
@@ -106,9 +106,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="koren--kurkumy-xxxx" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91261694_235875967817349_5871146317711708409_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=YnYfV6nU1sEAX-rXsZa&oh=8f096dc6eb8db1911b0d41af19e53ec1&oe=5EA9EFCB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КОРЕНЬ КУРКУМЫ 🧡💛">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="neskol-ko-faktov-o-vitamine" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90746209_1378625632323212_2756391034046175744_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=27msdXCQeQEAX-S8FJ_&oh=eb8a75d0833e82c1e2ecb73f503eddaf&oe=5EA942AD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="НЕСКОЛЬКО ФАКТОВ О ВИТАМИНЕ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90746209_1378625632323212_2756391034046175744_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=IqdzSa2Sfo8AX8rWU8H&oh=a34be0d2a745b97c88d32fd1fb04844a&oe=5EA942AD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="НЕСКОЛЬКО ФАКТОВ О ВИТАМИНЕ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -118,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="bestsennyy-tsink-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90996521_1942008172590954_5568033803674055447_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=SrUtlEq7JIAAX-tEpct&oh=649f2f2052a1390950db576210e067bc&oe=5EA864BA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БЕСЦЕННЫЙ ЦИНК 💔💜">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90996521_1942008172590954_5568033803674055447_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=M2it1AXH14wAX_X5zrO&oh=76e36a8cd1c1f7a6a383c141dbe371fc&oe=5EA864BA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БЕСЦЕННЫЙ ЦИНК 💔💜">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="retsept-bananovykh-blinchikov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90341539_918138405312887_3795518726980906851_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=5ae6mPjIVdYAX_4pUni&oh=eaef9840edb6f19683259456d9dc6966&oe=5EA6C2BB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ БАНАНОВЫХ БЛИНЧИКОВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90341539_918138405312887_3795518726980906851_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=5ae6mPjIVdYAX_4pUni&oh=5ce20dbcc0ae4df5f583c739b36b4d16&oe=5EAAB73B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ БАНАНОВЫХ БЛИНЧИКОВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ovoshchnye-bul-ony---eto-kontsentrat" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=F8CR5zxEMBMAX-aUPw2&oh=25e9067d09a054fb33c146a15fd71a82&oe=5EA9501C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Овощные бульоны - это концентрат">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=rAZv-ay9fOMAX-DIYzB&oh=f18915127ad4042e9eaffb4dedd528cf&oe=5EA9501C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Овощные бульоны - это концентрат">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -178,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="sanitayzer-sdelay-sam-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90416250_664743621015346_8148014957315489439_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=1tgIv9Pk58gAX-rbrFI&oh=61b7ad1e6d8f30042da0f5ff63821ba0&oe=5EA701CB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="САНИТАЙЗЕР СДЕЛАЙ САМ 🌱🤲">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90416250_664743621015346_8148014957315489439_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=1tgIv9Pk58gAX-rbrFI&oh=bb5a14a36d367f3f7fefa958ce5030e4&oe=5EAAF64B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="САНИТАЙЗЕР СДЕЛАЙ САМ 🌱🤲">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -188,7 +198,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="banany-s-chesnokom-protiv" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=piOEFN8PqbcAX_vEuqa&oh=55b08e26fefe840ca43974001ad5879b&oe=5EA8B58C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=4sg_bDh8SrgAX8Gywpe&oh=a415c2942a5c59fc1bead2f55a1ad52c&oe=5EA8B58C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -198,7 +208,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="deystviya-po-zashchite-ot-virusov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=vhKEwPcyn4cAX9qgeKx&oh=81b8e58533c24a8bfb17d2979962172c&oe=5EA643CE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=vhKEwPcyn4cAX9qgeKx&oh=520656c74af890723060246e3f2f3a92&oe=5EAA384E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -208,7 +218,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="gidrastis-xgoldensealx-xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=lYj7stutdYkAX9EcZtb&oh=6d9026e622ca674f69e9d3d553457275&oe=5EA6791A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГИДРАСТИС (Goldenseal) 🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=lYj7stutdYkAX9EcZtb&oh=a36bb967daf7821755b9e94a041a6eda&oe=5EAA6D9A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГИДРАСТИС (Goldenseal) 🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -218,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="list-korovyaka-xmullein-leaf" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90087795_205735070666702_4504977027204322393_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=a2zA7VHhOFIAX_WMnY4&oh=40a5147e2030b54b6195940e59fc83d2&oe=5EA8364F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛИСТ КОРОВЯКА (Mullein leaf)">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90087795_205735070666702_4504977027204322393_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=o4_seroZ34sAX-IpGmX&oh=0669ec195907e4b1df5c56cf0d0f48eb&oe=5EA8364F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛИСТ КОРОВЯКА (Mullein leaf)">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +258,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="shpinatxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89385356_221989658951830_6343720088222175732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=24-C5kxJsHwAX-7S7rM&oh=d37efda8ba7eae83fa68ed7f9cbca53d&oe=5EA8780A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ШПИНАТ 🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89385356_221989658951830_6343720088222175732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=EegNrgtxbBYAX8ZFX5g&oh=1664e162685b4a8dac477491710e2941&oe=5EA8780A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ШПИНАТ 🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="luchshie-produkty-dlya-ukrepleniya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=cMz9LCEwqUUAX_voGOh&oh=729a3477cbaa53628ce3925981173d35&oe=5EA93C2C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=qq8DK-vAFlUAX81eArU&oh=a330f9473cc09353076bd656df5d91c4&oe=5EA93C2C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,17 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="melissa-xlemon-balm" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825343_1440385602789392_3454483484027583974_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=w0nGroc4wGkAX8M7_K-&oh=8d91649d04af7b029286ddad27799a76&oe=5EA8B557" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МЕЛИССА (Lemon balm)">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="koshachiy-kogot--xcatxs" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87479961_498275437794629_462639628797701000_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=zOJziE0KuwsAX9zh6px&oh=ffb46b63237ef159e91496a1562f2756&oe=5EA72C06" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КОШАЧИЙ КОГОТЬ (Cat’s">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825343_1440385602789392_3454483484027583974_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=Gr6R2ZvD094AX-gznvl&oh=266be5c00852d4c0432e67c85b408941&oe=5EA8B557" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МЕЛИССА (Lemon balm)">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
