--- a/error.html
+++ b/error.html
@@ -45,7 +45,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=eh0kIL-iqr8AX-Bocol&oh=038a1996d6f14001a049a199f1e63d35&oe=5EA8802A" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=eh0kIL-iqr8AX-Bocol&oh=857dd86d82f0e070a40b76790be4c3ac&oe=5EAC74AA" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -86,16 +86,16 @@
 							<a href="./posts/./banany-s-chesnokom-protiv.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1380</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1387</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=4sg_bDh8SrgAX8Gywpe&oh=a415c2942a5c59fc1bead2f55a1ad52c&oe=5EA8B58C" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=4sg_bDh8SrgAX8Gywpe&oh=e642afe7083197e42611a4abbfd8d942&oe=5EACAA0C" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
 							</div>
 							<div class="article-more__item-name">БАНАНЫ С ЧЕСНОКОМ ПРОТИВ</div>
 						</a>
 							<a href="./posts/./deystviya-po-zashchite-ot-virusov.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1196</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1197</span>
 								</div>
 								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825346_1108896952836299_2336927074125111948_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=vhKEwPcyn4cAX9qgeKx&oh=520656c74af890723060246e3f2f3a92&oe=5EAA384E" alt="ДЕЙСТВИЯ ПО ЗАЩИТЕ ОТ ВИРУСОВ">
 							</div>
@@ -104,7 +104,7 @@
 							<a href="./posts/./ovoshchnye-bul-ony---eto-kontsentrat.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1156</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1157</span>
 								</div>
 								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90089190_494343818136071_3449349879668169093_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=rAZv-ay9fOMAX-DIYzB&oh=f18915127ad4042e9eaffb4dedd528cf&oe=5EA9501C" alt="Овощные бульоны - это концентрат">
 							</div>
@@ -113,47 +113,47 @@
 							<a href="./posts/./bestsennyy-tsink-xxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1110</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1122</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90996521_1942008172590954_5568033803674055447_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=M2it1AXH14wAX_X5zrO&oh=76e36a8cd1c1f7a6a383c141dbe371fc&oe=5EA864BA" alt="БЕСЦЕННЫЙ ЦИНК 💔💜">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90996521_1942008172590954_5568033803674055447_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=M2it1AXH14wAX_X5zrO&oh=272f82ce6742e224ef1a787656593a3f&oe=5EAC593A" alt="БЕСЦЕННЫЙ ЦИНК 💔💜">
 							</div>
 							<div class="article-more__item-name">БЕСЦЕННЫЙ ЦИНК 💔💜</div>
 						</a>
-							<a href="./posts/./gidrastis-xgoldensealx-xx.html" class="article-more__item">
+							<a href="./posts/./koren--kurkumy-xxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1011</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1106</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=lYj7stutdYkAX9EcZtb&oh=a36bb967daf7821755b9e94a041a6eda&oe=5EAA6D9A" alt="ГИДРАСТИС (Goldenseal) 🌱">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91261694_235875967817349_5871146317711708409_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=ZA-OasJ5D_0AX_MqclW&oh=f5264f7076b7b30684509c629484e18d&oe=5EA9EFCB" alt="КОРЕНЬ КУРКУМЫ 🧡💛">
 							</div>
-							<div class="article-more__item-name">ГИДРАСТИС (Goldenseal) 🌱</div>
+							<div class="article-more__item-name">КОРЕНЬ КУРКУМЫ 🧡💛</div>
+						</a>
+							<a href="./posts/./neskol-ko-faktov-o-vitamine.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>875</span>
+								</div>
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90746209_1378625632323212_2756391034046175744_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=IqdzSa2Sfo8AX8rWU8H&oh=a34be0d2a745b97c88d32fd1fb04844a&oe=5EA942AD" alt="НЕСКОЛЬКО ФАКТОВ О ВИТАМИНЕ">
+							</div>
+							<div class="article-more__item-name">НЕСКОЛЬКО ФАКТОВ О ВИТАМИНЕ</div>
 						</a>
 							<a href="./posts/./kardamon-xx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>863</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90756383_197664771661686_8287870001632030883_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=2iHylFnUwPEAX-Ysq1j&oh=29876cf9200b29e3c7be66a4693420d0&oe=5EA79B00" alt="КАРДАМОН ☀️">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90756383_197664771661686_8287870001632030883_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=3T3b1clIqywAX-1Wa1y&oh=bd41608afff3e1d310e0def933db14a0&oe=5EAB8F80" alt="КАРДАМОН ☀️">
 							</div>
 							<div class="article-more__item-name">КАРДАМОН ☀️</div>
 						</a>
-							<a href="./posts/./neskol-ko-faktov-o-vitamine.html" class="article-more__item">
+							<a href="./posts/./pishcha-dlya-virusov.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>842</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>799</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90746209_1378625632323212_2756391034046175744_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=IqdzSa2Sfo8AX8rWU8H&oh=a34be0d2a745b97c88d32fd1fb04844a&oe=5EA942AD" alt="НЕСКОЛЬКО ФАКТОВ О ВИТАМИНЕ">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91336771_1085054295184360_1080112823009053376_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=40XpZ5uOAUYAX93NP_Y&oh=2630356f3b5d3a6952221ecf1539e16d&oe=5EA8D62B" alt="ПИЩА ДЛЯ ВИРУСОВ">
 							</div>
-							<div class="article-more__item-name">НЕСКОЛЬКО ФАКТОВ О ВИТАМИНЕ</div>
-						</a>
-							<a href="./posts/./xxchay-iz-romashkix-kornya.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>765</span>
-								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/90179828_211567840064126_2564666930984579287_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=CAUhF9fjmT8AX8BK_y6&oh=f8595c5f3e885d26b818316a08ce708c&oe=5EA792C5" alt="🌼ЧАЙ ИЗ РОМАШКИ, КОРНЯ">
-							</div>
-							<div class="article-more__item-name">🌼ЧАЙ ИЗ РОМАШКИ, КОРНЯ</div>
+							<div class="article-more__item-name">ПИЩА ДЛЯ ВИРУСОВ</div>
 						</a>
 						</div>
 				</div>
