--- a/stories.html
+++ b/stories.html
@@ -61,7 +61,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=eh0kIL-iqr8AX-Bocol&oh=038a1996d6f14001a049a199f1e63d35&oe=5EA8802A" alt="Сок Сельдерея Здоровье Печени" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=eh0kIL-iqr8AX-Bocol&oh=857dd86d82f0e070a40b76790be4c3ac&oe=5EAC74AA" alt="Сок Сельдерея Здоровье Печени" /></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</div>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -106,9 +106,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="pishcha-dlya-virusov" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91336771_1085054295184360_1080112823009053376_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=40XpZ5uOAUYAX93NP_Y&oh=2630356f3b5d3a6952221ecf1539e16d&oe=5EA8D62B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПИЩА ДЛЯ ВИРУСОВ">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="koren--kurkumy-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91261694_235875967817349_5871146317711708409_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=YnYfV6nU1sEAX-rXsZa&oh=8f096dc6eb8db1911b0d41af19e53ec1&oe=5EA9EFCB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КОРЕНЬ КУРКУМЫ 🧡💛">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91261694_235875967817349_5871146317711708409_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=ZA-OasJ5D_0AX_MqclW&oh=f5264f7076b7b30684509c629484e18d&oe=5EA9EFCB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КОРЕНЬ КУРКУМЫ 🧡💛">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -128,7 +138,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="bestsennyy-tsink-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90996521_1942008172590954_5568033803674055447_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=M2it1AXH14wAX_X5zrO&oh=76e36a8cd1c1f7a6a383c141dbe371fc&oe=5EA864BA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БЕСЦЕННЫЙ ЦИНК 💔💜">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90996521_1942008172590954_5568033803674055447_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=M2it1AXH14wAX_X5zrO&oh=272f82ce6742e224ef1a787656593a3f&oe=5EAC593A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БЕСЦЕННЫЙ ЦИНК 💔💜">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zvezdochki-anisa-xbad-yan" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91000806_893142647790829_2812803803743325593_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=af0OoYh_17wAX_NR27F&oh=0494490cb8efe6ba6a5e8b242c8e6df3&oe=5EA841DE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗВЕЗДОЧКИ АНИСА (БАДЬЯН)">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91000806_893142647790829_2812803803743325593_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=af0OoYh_17wAX_NR27F&oh=a079c70285ff7a0f69153dd7907a1fb9&oe=5EAC365E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗВЕЗДОЧКИ АНИСА (БАДЬЯН)">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -148,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="retsept-bananovykh-blinchikov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90341539_918138405312887_3795518726980906851_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=5ae6mPjIVdYAX_4pUni&oh=5ce20dbcc0ae4df5f583c739b36b4d16&oe=5EAAB73B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ БАНАНОВЫХ БЛИНЧИКОВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90341539_918138405312887_3795518726980906851_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=i_DMHaAuwQAAX-sGYIQ&oh=fecffdc2c1357246aa154b47c2718b64&oe=5EAAB73B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ БАНАНОВЫХ БЛИНЧИКОВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -158,7 +168,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="kardamon-xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90756383_197664771661686_8287870001632030883_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=2iHylFnUwPEAX-Ysq1j&oh=29876cf9200b29e3c7be66a4693420d0&oe=5EA79B00" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАРДАМОН ☀️">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90756383_197664771661686_8287870001632030883_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=3T3b1clIqywAX-1Wa1y&oh=bd41608afff3e1d310e0def933db14a0&oe=5EAB8F80" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАРДАМОН ☀️">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxchay-iz-romashkix-kornya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/90179828_211567840064126_2564666930984579287_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=CAUhF9fjmT8AX8BK_y6&oh=f8595c5f3e885d26b818316a08ce708c&oe=5EA792C5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🌼ЧАЙ ИЗ РОМАШКИ, КОРНЯ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/90179828_211567840064126_2564666930984579287_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=CO6gdufC9-EAX-6SEmZ&oh=b9afe31a2eb4f23a3517d97971fbed0e&oe=5EAB8745" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🌼ЧАЙ ИЗ РОМАШКИ, КОРНЯ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -198,7 +208,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="banany-s-chesnokom-protiv" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=4sg_bDh8SrgAX8Gywpe&oh=a415c2942a5c59fc1bead2f55a1ad52c&oe=5EA8B58C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89948050_216341889486842_2928071985524080095_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=4sg_bDh8SrgAX8Gywpe&oh=e642afe7083197e42611a4abbfd8d942&oe=5EACAA0C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНЫ С ЧЕСНОКОМ ПРОТИВ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -218,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="gidrastis-xgoldensealx-xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=lYj7stutdYkAX9EcZtb&oh=a36bb967daf7821755b9e94a041a6eda&oe=5EAA6D9A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГИДРАСТИС (Goldenseal) 🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89747512_829409610871133_5215298013697807848_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=OGPC43UzdmMAX_HORWu&oh=ad566b1fb0df28e6727fa6041ba710a7&oe=5EAA6D9A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГИДРАСТИС (Goldenseal) 🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +238,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="list-korovyaka-xmullein-leaf" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90087795_205735070666702_4504977027204322393_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=o4_seroZ34sAX-IpGmX&oh=0669ec195907e4b1df5c56cf0d0f48eb&oe=5EA8364F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛИСТ КОРОВЯКА (Mullein leaf)">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/90087795_205735070666702_4504977027204322393_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=o4_seroZ34sAX-IpGmX&oh=fd88efdb558159444c2c7d5999bf8288&oe=5EAC2ACF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛИСТ КОРОВЯКА (Mullein leaf)">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -238,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="sirop-iz-yagod-buziny" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=nQsscBjKoBUAX9Jo-IW&oh=c28fd998ddc45e8c54e861ad197927a2&oe=5EA77B66" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89603917_104407507773694_3533493931988912371_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=j2sq3B9VAZ4AX_ZF2wD&oh=38c2c6844327e367800f8277a7677e63&oe=5EAB6FE6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СИРОП ИЗ ЯГОД БУЗИНЫ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +258,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ob-osnovnykh-dobavkakhx-aktual-nykh" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=kBCVgQqbDd0AX98Hag8&oh=4e77d756157bed9d1c37e2fa25020cf1&oe=5EA8767D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=kBCVgQqbDd0AX98Hag8&oh=2ad3a3763950e1c0e3cc3d6b49ee5411&oe=5EAC6AFD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="shpinatxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89385356_221989658951830_6343720088222175732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=EegNrgtxbBYAX8ZFX5g&oh=1664e162685b4a8dac477491710e2941&oe=5EA8780A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ШПИНАТ 🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89385356_221989658951830_6343720088222175732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=EegNrgtxbBYAX8ZFX5g&oh=99064cc0e8a90f9152aa697c8f5502b1&oe=5EAC6C8A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ШПИНАТ 🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -269,16 +279,6 @@
 							<input id="luchshie-produkty-dlya-ukrepleniya" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=qq8DK-vAFlUAX81eArU&oh=a330f9473cc09353076bd656df5d91c4&oe=5EA93C2C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="melissa-xlemon-balm" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89825343_1440385602789392_3454483484027583974_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=Gr6R2ZvD094AX-gznvl&oh=266be5c00852d4c0432e67c85b408941&oe=5EA8B557" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МЕЛИССА (Lemon balm)">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
